Authentication / Authorization refactoring